--- a/Online Shop/ListaKorisnika.html
+++ b/Online Shop/ListaKorisnika.html
@@ -129,8 +129,8 @@
                                                             '<td>' + k.Email + '</td>' +
                                                             '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
                                                             '<td><b>' + uloga.toUpperCase() + '</b></td>' +
-                                                            '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
-                                                            '<a class="btn btn-danger" href="Brisanje.html?' + k.KorisnickoIme + '">Brisanje</a></td>' +
+                                                            '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
+                                                            '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
                                 '</tr>');
                         }); 
                     });
