--- a/Online Shop/ListaKorisnika.html
+++ b/Online Shop/ListaKorisnika.html
@@ -142,6 +142,15 @@
         jQuery(function () {
             $("#divgreske").addClass('d-none');
 
+            // proveri da li je na stranicu vraceno sa Brisanja ili izmene
+            let searchParams = new URLSearchParams(window.location.search)
+            if (searchParams.has('msg')) {
+                // ima msg kao url parametar prikazi primljenu poruku
+                $("#divgreske").removeClass('d-none');
+                console.log(searchParams.get('msg'));
+                $("#greske").text(searchParams.get('msg'));
+            }
+
             $("#odjava").on('click', function () {
                 // ajax poziv ka api-ju za vrsenje registracije
                 $.ajax({
@@ -227,6 +236,7 @@
                                                         <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                                             <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
                                                         </svg>
+                                                        <span>&emsp;</span>
                                                         <span id="greske"></span>
                                                     </div>
 
