--- a/Online Shop/MojiProizvodi.html
+++ b/Online Shop/MojiProizvodi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Lista Korisnika - Shopy</title>
+    <title>Moji Proizvodi - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
     <script src="Scripts/jquery-3.7.0.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
@@ -81,8 +81,8 @@
                         // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
                         var uloga = data.Uloga;
 
-                        if (uloga !== 2) {
-                            // nije pitanju administrator - povratak na pocetnu stranicu
+                        if (uloga !== 1) {
+                            // nije pitanju prodavac - povratak na pocetnu stranicu
                             window.location.href = "MojProfil.html";
                         }
                     });
@@ -120,7 +120,7 @@
                             if (k.Uloga == 0) uloga = "Kupac";
                             if (k.Uloga == 1) uloga = "Prodavac";
                             if (k.Uloga == 2) uloga = "Administrator";
-                            
+
                             $("#korisnici > tbody").append('<tr><td>' + k.KorisnickoIme + '</td>' +
                                                             '<td>' + k.Ime + '</td>' +
                                                             '<td>' + k.Prezime + '</td>' +
@@ -131,7 +131,7 @@
                                                             '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
                                                             '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
                                 '</tr>');
-                        }); 
+                        });
                     });
                 }
             }
@@ -420,67 +420,19 @@
                                             <div class="card-body p-4 p-lg-5 text-black">
                                                 <form>
                                                     <div class="d-flex mb-3 pb-1">
-                                                        <span class="h1 fw-bold mb-0">Shopy Korisnici</span>
+                                                        <span class="h1 fw-bold mb-0">Shopy Proizvodi</span>
                                                     </div>
 
-                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih korisnika registrovanih na Shopy platformu</h5>
+                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje ste objavili</h5>
 
                                                     <div class="pt-1 mb-3">
-                                                        <a href="DodajProdavca.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje prodavca</a>
+                                                        <a href="DodajProizvod.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje proizvoda</a>
                                                     </div>
 
                                                     <br />
 
                                                     <h5 class="fw-semibold" style="letter-spacing: 1px;">Pretraga korisnika registrovanih na Shopy platformu</h5>
                                                     <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je korisnike pretražiti po jednom ili više kriterijuma. Ostavljanjem praznog polja, taj kriterijum se <b>NE PRIMENJUJE</b> na pretragu!</p>
-
-                                                    <div class="col-12 mb-3">
-                                                        <div class="row">
-                                                            <div class="col-3">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-wrapping">Ime</span>
-                                                                    <input id="ime" type="text" class="form-control" placeholder="Unesite pojam..." aria-label="ime" aria-describedby="addon-wrapping">
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-3">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-wrapping">Prezime</span>
-                                                                    <input id="prezime" type="text" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="col-2">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-wrapping">Od</span>
-                                                                    <input id="od" type="date" min="1970-01-01" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="col-2">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-wrapping">Do</span>
-                                                                    <input id="do" type="date" min="1970-01-01" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="col-2">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-wrapping">Uloga</span>
-                                                                    <select id="uloga" class="form-control">
-                                                                        <option value="">/</option>
-                                                                        <option value="Kupac">Kupac</option>
-                                                                        <option value="Prodavac">Prodavac</option>
-                                                                    </select>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="pt-1 mb-3">
-                                                                <button id="pretragabtn" type="button" class="btn btn-dark btn-lg btn-block">🔎 Pretraga korisnika</button>
-                                                                &emsp;<button id="ponistibtn" type="reset" class="btn btn-secondary btn-lg btn-block">↺ Resetovanje pretrage</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
 
                                                     <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
                                                         <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -490,19 +442,28 @@
                                                         <span id="greske"></span>
                                                     </div>
 
-                                                    <div class="col-12 mb-1 d-flex justify-content-end">
-                                                        <div class="row">
-                                                            <div class="col-12">
-                                                                <div class="input-group flex-nowrap mb-3">
-                                                                    <span class="input-group-text" id="addon-sort">Sortiranje korisnika po</span>
+                                                    <div class="col-12 mt-3">
+                                                        <div class="row justify-content-between">
+                                                            <div class="col-4 d-flex">
+                                                                <div class="form-check">
+                                                                    <input class="form-check-input" type="checkbox" id="dostupni">
+                                                                    <label class="form-check-label" for="dostupni">
+                                                                        Prikaz samo dostupnih proizvoda
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="col-5">
+                                                                <div class="input-group mb-3">
+                                                                    <span class="input-group-text" id="addon-sort">Sortiranje proizovoda</span>
                                                                     <select id="sort" class="form-control">
                                                                         <option value="0">Podrazumevano</option>
-                                                                        <option value="1">Imenu (rastuće)</option>
-                                                                        <option value="2">Imenu (opadajuće)</option>
-                                                                        <option value="3">Datumu rođenja (rastuće)</option>
-                                                                        <option value="4">Datumu rođenja (opadajuće)</option>
-                                                                        <option value="5">Ulozi (rastuće)</option>
-                                                                        <option value="6">Ulozi (opadajuće)</option>
+                                                                        <option value="1">Naziv (rastuće)</option>
+                                                                        <option value="2">Naziv (opadajuće)</option>
+                                                                        <option value="3">Cena (rastuće)</option>
+                                                                        <option value="4">Cena (opadajuće)</option>
+                                                                        <option value="5">Datum oglašavanja (rastuće)</option>
+                                                                        <option value="6">Datum oglašavanja (opadajuće)</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
