--- a/Online Shop/MojiProizvodi.html
+++ b/Online Shop/MojiProizvodi.html
@@ -431,8 +431,8 @@
 
                                                     <br />
 
-                                                    <h5 class="fw-semibold" style="letter-spacing: 1px;">Pretraga korisnika registrovanih na Shopy platformu</h5>
-                                                    <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je korisnike pretražiti po jednom ili više kriterijuma. Ostavljanjem praznog polja, taj kriterijum se <b>NE PRIMENJUJE</b> na pretragu!</p>
+                                                    <h5 class="fw-semibold" style="letter-spacing: 1px;">Prikaz i filtiriranje proizvoda na Shopy platformi</h5>
+                                                    <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je proizovde filtrirati po statusu dostupnosti kao i sortirati ih po ponuđenim kriterijumima.</p>
 
                                                     <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
                                                         <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
