--- a/Online Shop/MojiProizvodi.html
+++ b/Online Shop/MojiProizvodi.html
@@ -474,13 +474,14 @@
                                                         <table id="korisnici" class="table table-bordered rounded-5 border-dark">
                                                             <thead>
                                                                 <tr>
-                                                                    <th>Korisničko ime</th>
-                                                                    <th>Ime</th>
-                                                                    <th>Prezime</th>
-                                                                    <th>Pol</th>
-                                                                    <th>Email</th>
-                                                                    <th>Datum rođenja</th>
-                                                                    <th>Uloga</th>
+                                                                    <th>Naziv</th>
+                                                                    <th>Slika</th>
+                                                                    <th>Količina</th>
+                                                                    <th>Cena</th>
+                                                                    <th>Opis</th>
+                                                                    <th>Datum postavljanja</th>
+                                                                    <th>Grad</th>
+                                                                    <th>Status</th>
                                                                     <th>Operacija</th>
                                                                 </tr>
                                                             </thead>
